# motion_primitives

./: .gitignore  stack.xml
coordinate_motions/: CMakeLists.txt  mainpage.dox  manifest.xml  set_approach_conf  set_configuration  set_configuration2  trigger_trajectory
coordinate_motions/launch/: coordinate_motions.launch
coordinate_motions/src/: coordinate_motions.cpp  coordinate_motions_node.cpp
coordinate_motions/srv/: GraspMotion.srv  SetConfiguration.srv  TriggerTrajectory.srv
matlab/: Makefile  fit2OrderSystem.m  fit2OrderSystemMakkar.m  fit2orderSystem.m  makkarFrictionForce.m  objectiveFunction.m  pid_design.m  randomInitialGuess.m  secondOrderSystemMakkar.m  simulate2OrderSystemMakkar.m  simulate2orderSystem.m  test.m  test2.m  test3.m  test4.m  test5.m  test6.m  test7.m  test8.m  test9.m  visualizeData.m
matlab/data/: ffj0_sine_5_5.txt  (+12 more)
motion_primitives_launch/: mainpage.dox  manifest.xml
motion_primitives_msgs/: mainpage.dox  manifest.xml
primitive_controllers/: CMakeLists.txt  README  close_hand  mainpage.dox  manifest.xml  open_hand  pronate_hand  test.txt  tripod_d004
test_traj_pub/: CMakeLists.txt  mainpage.dox  manifest.xml
tracking_controllers/: CMakeLists.txt  README  controller_plugins.xml  mainpage.dox  manifest.xml
tracking_controllers/include/tracking_controllers/: srh_inverse_dynamics_controller.hpp  srh_system_identification_controller.hpp  ss_model.hpp  system_identification.hpp
tracking_controllers/src/: srh_inverse_dynamics_controller.cpp  srh_system_identification_controller.cpp  ss_model.cpp  system_identification.cpp
(+82 files in other folders)
